# tracer

./: .gitignore  Cargo.toml  Readme.md  build.rs
shaders/: geometry.glsl  main.glsl  rng.glsl  shader.glsl
src/: camera.rs  demos.rs  geometry.rs  images.rs  main.rs  material.rs  shader.glsl  tev.rs  tracer.rs
src/common/: aabb.rs  math.rs  mod.rs  scene.rs  util.rs
src/cpu/: driver.rs  geometry.rs  mod.rs  octree.rs  renderer.rs  stats.rs
src/cpu/accel/: bvh.rs  mod.rs  octree.rs
src/gpu/: main.rs  material.rs
tracer/: Cargo.toml
tracer-gui/: Cargo.toml
tracer-gui/src/: main.rs
tracer/src/: demos.rs  images.rs  lib.rs  main.rs  tev.rs
tracer/src/common/: aabb.rs  math.rs  mod.rs  progress.rs  scene.rs  util.rs
tracer/src/cpu/: driver.rs  geometry.rs  mod.rs  renderer.rs  stats.rs
tracer/src/cpu/accel/: bvh.rs  mod.rs
