[package]
name = "tracer"
version = "0.1.0"
authors = ["Karel <karel.peeters.leuven@gmail.com>"]
edition = "2018"

[dependencies]
image = "0.23.14"
palette = "0.5.0"
rand = "0.8.3"
rand_distr = "0.4.0"
rayon = "1.5.0"
wavefront_obj = "9.0.0"
imgref = "1.7.1"
lazy_static = "1.4.0"
exr = "1.1.0"
windows = "0.4.0"
tev_client = { path = "../tev_client" }
itertools = "0.10.0"
crossbeam = "0.8.0"
num_cpus = "1.13.0"

[build-dependencies]
windows = "0.4.0"

[profile.dev]
opt-level = 1

[profile.release]
debug = true
opt-level = 2
