[package]
name = "tracer-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
tracer = { path = "../tracer" }
eframe = { version = "0.21.3", default-features = false, features = ["glow", "default_fonts"] }
rand = { version = "0.8.4", features = ["small_rng"] }
once_cell = "1.17.1"
palette = "0.6.0"
